<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Find device</string>
    <string name="find_device">Find device</string>
    <string name="enable_find_device_success">Find device is on</string>
    <string name="disable_find_device_success">Find device is off</string>
    <string name="enable_find_device_error">"Can't turn on Find device. %1$s"</string>
    <string name="disable_find_device_error">"Can't turn off Find device. %1$s"</string>
    <string name="find_device_error_access_denied">Access denied.</string>
    <string name="find_device_error_unknown">Unknown error (%s).</string>
    <string name="find_device_error_password_changed">Account password has been recently changed.</string>
    <string name="find_device_error_network">Network error.</string>
    <string name="find_device_error_server">Server error (%s).</string>
    <string name="find_device_error_account_sys_timeout">"Couldn't connect to Mi Account. "</string>
    <string name="find_device_error_account_unknown_error">Mi Account error (%s).</string>
    <string name="find_device_crash">Find Device closed unexpectedly.</string>
    <string name="find_device_storage_corrupted">Find Device storage corrupted. Your device is unsafe now.</string>
    <string name="find_device_telephony_fault">Find Device: Telephony fault (%s).</string>
    <string name="time_correction_success">Time corrected</string>
    <string name="time_correction_failure">"Can't correct time. %s"</string>
    <string name="find_device_stop_noise">Tap OK to silence</string>
    <string name="find_device_noise_title">Find device alarm</string>
    <string name="find_device_success_title">Find device</string>
    <string name="find_device_notice_p1">Go to</string>
    <string name="find_device_notice_p2">i.mi.com</string>
    <string name="find_device_notice_p3">"to locate, lock, or restore your phone.
If you switch SIM cards, another SMS will be sent automatically to reactivate this feature."</string>
    <string name="i_know">OK</string>
    <string name="unlock_error_network">"Can't connect to network"</string>
    <string name="unlock_error_device_id">"Can't get device ID"</string>
    <string name="unlock_error_ssl_hand_shake">"Couldn't connect to server, try setting date and time manually."</string>
    <string name="unlock_bad_authentication">Invalid username or password</string>
    <string name="unlock_error_server">Server error</string>
    <string name="unlock_access_denied">Access denied</string>
    <string name="unlock_wrong_captcha">The code you entered is incorrect</string>
    <string name="unlock_error_unknown">"Can't sign in"</string>
    <string name="unlock_error_user_name">Invalid username</string>
    <string name="unlock_error_interrupted">Interrupted</string>
    <string name="unlock_error_rpc">RPC error</string>
    <string name="unlock_error_abort">Canceled by user</string>
    <string name="unlock_error_passport_sdk_timeout">"Mi Account SDK isn't responding"</string>
    <string name="activate_xiaomi_account">Activate this device</string>
    <string name="login_extra_steps">Sign in verification</string>
    <string name="phone_locked">This device may be associated with existing Mi Account (%s). Sign in to activate this device.</string>
    <string name="phone_locked_account_email">, associated email: %s</string>
    <string name="phone_locked_account_phone">, associated phone number: %s</string>
    <string name="password">Password</string>
    <string name="captcha">Captcha</string>
    <string name="stop_on_empty_password">"Password can't be blank"</string>
    <string name="stop_on_empty_captcha">"Captcha can't be blank"</string>
    <string name="verifing_account">Verifying password…</string>
    <string name="doing_extra_login_steps">Verifying sign in…</string>
    <string name="adding_or_updating_account">Updating account…</string>
    <string name="unlocking">Activating…</string>
    <string name="unlock">Activate</string>
    <string name="verify_password_failed">"Couldn't verify Mi Account ID. %s."</string>
    <string name="login_failed">"Couldn't sign in. %s."</string>
    <string name="change_find_device_status_failed">"Couldn't unlock. %s."</string>
    <string name="unlock_help_title">Unlock help:</string>
    <string name="unlock_help">"Stay connected to the network
Make sure you've installed a working SIM card, and your device is not connected to an ineffective WLAN network

Forgot password?
Go to id.mi.com to reset your password

Other reasons
Sign in to i.mi.com and try unlocking your device from there"</string>
    <string name="passport_vcode_prompt_long">Enter verification code</string>
    <string name="passport_trust_device">Trust this device</string>
    <string name="passport_verify">Verify</string>
    <string name="passport_error_empty_vcode">Enter verification code</string>
    <string name="passport_checking_vcode">Checking password…</string>
    <string name="unlock_error_wrong_vcode">The code you entered is incorrect</string>
    <string name="passport_notification_processing">Processing…</string>
    <string name="passport_notification_need_unlock_again">Try to unlock again</string>
    <string name="device_lost">This device is lost</string>
    <string name="device_locked">This device is locked</string>
    <string name="default_lock_msg_words_with_phone">Hi! I lost my phone. Could you please contact me? Thanks!</string>
    <string name="default_lock_msg_words">This device is associated with an existing Mi Account. For security reasons, you need to enter password to verify the device.</string>
    <string name="lock_msg_phone">Contact information: %s</string>
    <string name="default_debt_msg_words">"This device is locked due to an overdue installment payment.
Contact your sales agent for details."</string>
    <string name="sys_notification_async_verify_title">Reactivate Find device</string>
    <string name="sys_notification_async_verify_content">Our updated Security Policy requires that Find device should be reactivated.</string>
    <string name="sys_notification_async_open_failed_title">"Couldn't turn on Find device"</string>
    <string name="sys_notification_async_open_failed_content">Tap to try again or cancel.</string>
</resources>
