<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:background="#fff8f8f8" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/title_group" android:background="@color/activity_titile_color" android:layout_width="fill_parent" android:layout_height="@dimen/activity_title_height" android:layout_alignParentTop="true">
        <TextView android:textSize="@dimen/activity_titile_text_size" android:textColor="@color/activity_titile_text_color" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/activate_xiaomi_account" />
        <ImageView android:layout_gravity="center|left" android:id="@id/back" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/passport_action_bar_back_light" />
    </FrameLayout>
    <FrameLayout android:id="@id/lock_icon" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="210.0dip" android:layout_below="@id/title_group">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/find_device_lock" />
    </FrameLayout>
    <RelativeLayout android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/lock_icon">
        <TextView android:textAppearance="@miui:style/TextAppearance.Medium" android:textColor="#ff8b8b8b" android:gravity="center|left|top" android:id="@id/prompt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <FrameLayout android:id="@id/password_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_below="@id/prompt">
            <com.xiaomi.finddevice.v2.ui.PassportGroupEditText android:id="@id/password_input" android:paddingRight="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password" android:password="true" android:singleLine="true" />
            <ImageView android:layout_gravity="center|right" android:id="@id/show_password_img" android:layout_width="40.0dip" android:layout_height="40.0dip" />
        </FrameLayout>
        <FrameLayout android:id="@id/captcha_group" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/password_group">
            <com.xiaomi.finddevice.v2.ui.PassportGroupEditText android:id="@id/captcha_code_input" android:paddingRight="102.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/captcha" android:singleLine="true" />
            <ImageView android:layout_gravity="center|right" android:id="@id/captcha_image" android:layout_width="90.0dip" android:layout_height="30.0dip" android:layout_marginRight="8.0dip" android:scaleType="fitXY" />
        </FrameLayout>
        <TextView android:textAppearance="@miui:style/TextAppearance.Medium" android:gravity="left" android:id="@id/status_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_below="@id/captcha_group" />
        <Button android:textColor="@color/text_color_white" android:id="@id/login_button" android:background="@drawable/passport_btn_bg_warn_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/unlock" android:layout_below="@id/status_view" />
        <TextView android:textAppearance="@miui:style/TextAppearance.Medium" android:textColor="#ff8b8b8b" android:gravity="bottom|center|left" android:id="@id/unlock_help" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin" android:text="@string/unlock_help" android:layout_alignParentBottom="true" />
        <TextView android:textAppearance="@miui:style/TextAppearance.Medium" android:textStyle="bold" android:textColor="@color/activity_titile_text_color" android:gravity="bottom|center|left" android:id="@id/unlock_help_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin" android:text="@string/unlock_help_title" android:layout_above="@id/unlock_help" />
    </RelativeLayout>
</RelativeLayout>